@@ -1,3 +1,7 @@
+2009-09-14  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* ld-arm/farcall-mixed-lib.d: Update.
+
 2009-09-11  Jie Zhang  <jie.zhang@analog.com>
 
 	* ld-elf/warn2.d: `Foo' appears in section 3 when target
